@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- Core: properly reload scripts in mods when a world is unloaded and immediately loaded again
 
 ## Misc Improvements
 - `hotkeys`: don't display DFHack logo in legends mode since it covers up important interface elements. the Ctrl-Shift-C hotkey to bring up the menu and the mouseover hotspot still function, though.
